using Material.Icons;

namespace Hermes.Features.SfcSimulator;

public class SfcSimulatorViewModel : PageBase 
{
    public SfcSimulatorViewModel()
        : base("UUT Processor", MaterialIconKind.FolderEye, 0)
    {
        
    }   
}